feat: update page title to Arabic "مبادرة"

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { Font } from 'astro:assets';
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<Font cssVariable="--font-masmak" preload />
-		<title>Astro</title>
+		<title>مبادرة</title>
 	</head>
 	<body>
 		<div class="container px-15 mx-auto">
